--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -4,7 +4,7 @@
 .menu
     display: flex
     justify-content: space-between
-    align-items: centert
+    align-items: center
 .logo
     color: $primary
     text-transform: uppercase
